--- a/stylesheets/banner.css
+++ b/stylesheets/banner.css
@@ -1,4 +1,5 @@
-#oribe-main-product-grid-row > .banner_product  {
+
+#oribe-main-product-grid-row > .banner_product.blocks_2  {
     grid-area: 2 / 3 / 2 /  5;
     height: 100%;
 }
@@ -20,4 +21,55 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+@media only screen and (max-width: 2000px) {
+
+
+
+#oribe-main-product-grid-row {
+    grid-template-columns: repeat(4, 25%) !important;
+    overflow: auto;
+    grid-gap: 0 !important ;
+}
+
+#oribe-main-product-grid-row > div
+{
+    width: 100% !important;
+    padding: 10px !important;
+}
+}
+@media only screen and (max-width: 1240px) {
+
+    #oribe-main-product-grid-row {
+        grid-template-columns: repeat(3, 33.33%) !important;
+    }
+
+    #oribe-main-product-grid-row > .banner_product.blocks_2  {
+        grid-area: unset ;
+    }
+}
+
+@media only screen and (max-width: 769px) {
+    #oribe-main-product-grid-row {
+        grid-template-columns: repeat(2, 50%) !important;
+    }
+
+    .product-card__container.oribe-category-grid
+    {
+        height: 100% ;
+        padding: 0 !important;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    #oribe-main-product-grid-row {
+        grid-template-columns: 100% !important;
+    }
+
+    #oribe-main-product-grid-row > .banner_product .product-card__container.oribe-category-grid
+    {
+        padding-bottom: 100% !important ;
+    }
+
 }
