--- a/stylesheets/banner.css
+++ b/stylesheets/banner.css
@@ -1,8 +1,4 @@
 
-#oribe-main-product-grid-row > .banner_product.blocks_2  {
-    grid-area: 2 / 3 / 2 /  5;
-    height: 100%;
-}
 
 #oribe-main-product-grid-row > .banner_product  .product-card__container.oribe-category-grid {
     display: flex;
@@ -23,37 +19,46 @@
     object-fit: cover;
 }
 
+@media only screen and (max-width: 1965px) and (min-width: 1565px) 
+{
+
+    #oribe-main-product-grid-row > .banner_product.blocks_2  {
+        grid-area: 2 / 3 / 2 /  5;
+        height: 100%;
+    }
+}
+
 @media only screen and (max-width: 2000px) {
 
 
 
-#oribe-main-product-grid-row {
+/* #oribe-main-product-grid-row {
     grid-template-columns: repeat(4, 25%) !important;
     overflow: auto;
     grid-gap: 0 !important ;
-}
+} */
 
-#oribe-main-product-grid-row > div
+/* #oribe-main-product-grid-row > div
 {
     width: 100% !important;
     padding: 10px !important;
-}
+} */
 }
 @media only screen and (max-width: 1240px) {
 
-    #oribe-main-product-grid-row {
+    /* #oribe-main-product-grid-row {
         grid-template-columns: repeat(3, 33.33%) !important;
     }
 
     #oribe-main-product-grid-row > .banner_product.blocks_2  {
         grid-area: unset ;
-    }
+    } */
 }
 
 @media only screen and (max-width: 769px) {
-    #oribe-main-product-grid-row {
+    /* #oribe-main-product-grid-row {
         grid-template-columns: repeat(2, 50%) !important;
-    }
+    } */
 
     .product-card__container.oribe-category-grid
     {
@@ -62,10 +67,10 @@
     }
 }
 
-@media only screen and (max-width: 600px) {
-    #oribe-main-product-grid-row {
+@media only screen and (max-width: 785px) {
+    /* #oribe-main-product-grid-row {
         grid-template-columns: 100% !important;
-    }
+    } */
 
     #oribe-main-product-grid-row > .banner_product .product-card__container.oribe-category-grid
     {
